[package]
name = "error-pile"
description = "All errors for projects managed by Ram Hotel Management apps reside in this crate"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
calamine = "0.27"
chrono = "0.4"
graph-http = "3"
graph-rs-sdk = "3"
russh = "0.51"
russh-sftp = "2"
sea-orm = "1"
sea-orm-migration = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "2"
tokio = "1"
uuid = "1"
zip = "2"
