[package]
name = "error-pile"
description = "All errors for projects managed by Ram Hotel Management apps reside in this crate"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = "0.4"
graph-http = "3"
graph-rs-sdk = "3"
russh = "0.52"
russh-sftp = "2"
sea-orm = "1"
sea-orm-migration = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "2"
tokio = "1"
uuid = "1"
zip = "3"
# ocr-client = { git = "https://github.com/Ram-Hotel-Management/ocr-client.git" }
timeframe = { git ="https://github.com/Ram-Hotel-Management/timeframe.git" }
pdfium-render = "0.8.31"
reqwest = { version = "0.12.15", features = ["json"] }
url = "2.5.4"
pyo3 = "0.25.0"
