[package]
name = "error-pile"
description = "All errors for projects managed by Ram Hotel Management apps reside in this crate"
version = "0.1.3"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = "0.4"
graph-http = "3"
graph-rs-sdk = "3"
russh = "0.53"
russh-sftp = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = "1"
uuid = "1"
zip = "4"
pdfium-render = "0.8.31"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5.4"
image = "0.25.6"
pyo3 = {version = "0.25.0", default-features = false, optional = true}
sqlx = {version = "0.8.6", default-features = false}

[features]
python = ["dep:pyo3"]
